@@ -1,3 +1,7 @@
+2003-10-09  Derek Price  <derek@ximbiot.com>
+
+	* cvs.h: s/^extern// off of function declarations per HACKING.
+
 2003-10-08  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (cvs_SOURCES): Add history.h.
